--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -1,3 +1,6 @@
 // Import your components CSS files here.
 @import "alert";
+@import "footer";
 @import "navbar";
+@import "banner";
+@import "cards";
