--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,15 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
+$red: #EF255F;
+$light-red: #D23333;
+$blue: #5AC8D8;
+$yellow: #FCCF4D;
+$orange: #FF6F3C;
+$dark-orange: #da552f;
+$green: #658525;
+$gray: #E3D9CA;
+$dark-gray: #616668;
+$strong-gray: #999999;
+$shadow-gray: #E6E6E6;
 $light-gray: #F4F4F4;
